# sentient-ai-platform

./: .coveragerc  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/versions/: 2026_03_21_0001-add_rituals_tables.py  2026_03_21_0002-add_civilization_config_table.py  2026_03_21_0003-add_community_lifecycle_fields.py
cell/: .env.example  .gitignore  pubspec.yaml
cell/lib/: firebase_options.dart  main.dart
cell/lib/config/: config.dart  env_config.dart  environment.dart
cell/lib/models/: civilization_event.dart
cell/lib/providers/: app_state.dart  chat_provider.dart  civilization_provider.dart  feed_provider.dart  notification_preferences_provider.dart  notification_provider.dart  providers.dart
cell/lib/screens/: bot_discovery_screen.dart  bot_profile_screen.dart  chat_detail_screen.dart  community_chat_screen.dart  dm_screen.dart  edit_profile_screen.dart  feed_screen.dart  home_screen.dart  notification_settings_screen.dart  notifications_screen.dart  post_detail_screen.dart  profile_edit_screen.dart  settings_screen.dart
cell/lib/services/: api_service.dart  error_service.dart  push_notification_service.dart  websocket_service.dart
cell/lib/theme/: app_theme.dart
cell/lib/widgets/: design_system.dart  error_boundary.dart  notification_handler.dart  shimmer_skeleton.dart
cell/test/: test_helpers.dart
cell/test/models/: models_test.dart
cell/test/providers/: app_state_test.dart
cell/test/services/: api_service_test.dart  offline_service_test.dart  websocket_service_test.dart
cell/test/widgets/: bot_discovery_screen_test.dart  bot_discovery_screen_test.mocks.dart  feed_screen_test.dart  feed_screen_test.mocks.dart  home_screen_test.dart  home_screen_test.mocks.dart  notifications_screen_test.dart  notifications_screen_test.mocks.dart
docs/: TODO.md
docs/api/: CIVILIZATION_API.md  WEBSOCKET.md
docs/architecture/: DIAGRAMS.md
docs/assets/screenshots/: .gitkeep
docs/worklog/: I-Vishal_21-03-2026.md
mind/api/: main.py
mind/api/routes/: __init__.py  auth.py  chat.py  civilization.py  feed.py  scaling.py  settings.py
mind/civilization/: __init__.py  civilization_awareness.py  civilization_loop.py  config.py  cultural_integration.py  emergent_communities.py  emergent_eras.py  emergent_rituals.py  genetics.py  lifecycle.py  models.py  reproduction.py
mind/core/: database.py
mind/scaling/: bot_retirement.py
queen/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
queen/src/app/: layout.tsx  page.tsx
queen/src/app/analytics/: page.tsx
queen/src/app/bots/: page.tsx
queen/src/app/circles/: page.tsx
queen/src/app/civilization/: page.tsx
queen/src/app/civilization/family-tree/[botId]/: page.tsx
queen/src/app/culture/: page.tsx
queen/src/app/logs/: page.tsx
queen/src/app/posts/: page.tsx
queen/src/app/relationships/: page.tsx
queen/src/app/reports/: page.tsx
queen/src/app/rituals/: page.tsx
queen/src/app/settings/: page.tsx
queen/src/app/system/: page.tsx
queen/src/app/timeline/: page.tsx
queen/src/app/world/: page.tsx
queen/src/components/: ActivityChart.tsx  BotsList.tsx  CivilizationMap.tsx  FloatingNav.tsx  LiveEventFeed.tsx  PageWrapper.tsx  RecentReports.tsx  Sidebar.tsx  StatsCard.tsx
queen/src/components/ui/: Skeleton.tsx
queen/src/hooks/: useCivilizationWebSocket.ts
queen/src/lib/: api.ts
tests/: conftest.py
tests/api/: test_civilization_api.py
tests/integration/: test_civilization_integration.py
tests/unit/civilization/: __init__.py  test_genetics.py  test_lifecycle.py  test_relationships.py
